# rust_cli

./: Cargo.toml  README.md  task.md
src/: file.rs  main.rs  rate_limit.rs  report.rs  scanner.rs  security_checks.rs
