[package]
name = "web_security_auditor"
version = "0.1.0"
edition = "2021"
description = "Defensive web application security auditor for authorized assessments"
license = "MIT"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
url = "2.5"
